<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/title_profile">

        <PreferenceScreen
            app:key="signOut"
            app:title="@string/title_sign_out"
            app:icon="@drawable/ic_extras_24"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notification_header">

        <SwitchPreferenceCompat
            app:key="@string/notification_key"
            app:title="@string/notification_title"
            app:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/text_about">

        <PreferenceScreen
            app:key="about"
            app:title="@string/about_title"
            app:icon="@drawable/ic_code_24"/>

        <PreferenceScreen
            app:key="name_version"/>

    </PreferenceCategory>

</PreferenceScreen>