<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_gameday">

    <fragment
        android:id="@+id/navigation_points"
        android:name="com.skysam.hchirinos.mundialcatar.ui.points.PointsFragment"
        android:label="@string/title_points"
        tools:layout="@layout/points_fragment" />

    <fragment
        android:id="@+id/navigation_gameday"
        android:name="com.skysam.hchirinos.mundialcatar.ui.gameday.GamedayFragment"
        android:label="@string/title_gameday"
        tools:layout="@layout/fragment_gameday" />

    <fragment
        android:id="@+id/navigation_results"
        android:name="com.skysam.hchirinos.mundialcatar.ui.results.ResultsFragment"
        android:label="@string/title_results"
        tools:layout="@layout/fragment_results" />

    <fragment
        android:id="@+id/navigation_leaders"
        android:name="com.skysam.hchirinos.mundialcatar.ui.leaders.LeadersFragment"
        android:label="@string/title_leaders"
        tools:layout="@layout/fragment_leaders" />
</navigation>